<resources>
    <string name="app_name">Cppbus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="code_forgot">Code oublié?</string>
    <string name="contact_support">Contacter le support technique</string>
    <string name="copyright_cpp_system">CPP SYSTEM 2018-2020</string>
    <string name="dismiss_dialog">Fermer</string>
    <string name="cpp_caisse">Caisse</string>
    <string name="cpp_scan2d">Scanner 1D/2D</string>
    <string name="search_user">Recherche</string>
    <string name="history">Historique</string>
    <string name="incident">Incident</string>
    <string name="others">Autres</string>
    <string name="setting">Paramètre</string>
    <string name="twohourw">2H</string>
    <string name="daily">Jour</string>
    <string name="weekly">Semaine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_history">MainActivity</string>


    <!-- CUSTOMER MESSAGE -->
    <string name="invalid_card">CARTE INVALIDE</string>
    <string name="failed_read_card">ERREUR LECTURE CARTE</string>
    <string name="disabled_card">CARTE DESACTIVEE</string>
    <string name="tag_lost_card">CARTE RETIREE</string>
    <string name="error_on_card">ERREUR RESEAU INATTENDUE</string>
    <string name="contact_cpp_support">Contatez le support CPP!</string>
    <string name="try_to_chek_balance">Essayer de verifier votre solde pour corriger cette erreur!</string>
    <string name="credit">Crédit</string>
    <string name="please_wait">Merci de patienter et ne retirez pas votre carte svp!</string>
    <string name="welcome_cpp">BIENVENUE</string>
    <string name="start_again">Veuillez recommencer l\'opération!</string>
    <string name="please_retry_later">Veuillez réessayer ulterieurement!</string>
    <string name="not_ticket">Ticket Insuffisant</string>
    <string name="nfc_please_tap_card">PLACER LA CARTE SUR LA ZONE</string>
    <string name="nfc_keep_card_on_field"> NE RETIRER PAS VOTRE CARTE!</string>
    <string name="balance">SOLDE</string>
    <string name="station">ARRET</string>
    <string name="step_1_itinerary">Choisir variance</string>
    <string name="step_2_itinerary">Choisir itinéraire</string>
    <string name="step_3_itinerary">Validation</string>

</resources>